log
Fri Mar 27 05:48:19 PM UTC 2026: 
 list.c | 7 +++++++
 1 file changed, 7 insertions(+)
Compilation failed
In file included from test.c:5:
list.c: In function ‘pushCurrent’:
list.c:79:5: error: unknown type name ‘Nodo’; did you mean ‘Node’?
   79 |     Nodo* nuevo = createNodo(data);
      |     ^~~~
      |     Node
list.c:79:19: error: implicit declaration of function ‘createNodo’; did you mean ‘createNode’? [-Wimplicit-function-declaration]
   79 |     Nodo* nuevo = createNodo(data);
      |                   ^~~~~~~~~~
      |                   createNode
list.c:79:19: error: initialization of ‘int *’ from ‘int’ makes pointer from integer without a cast [-Wint-conversion]
list.c:80:5: error: unknown type name ‘Nodo’; did you mean ‘Node’?
   80 |     Nodo* aux = front(list);
      |     ^~~~
      |     Node
list.c:80:17: error: implicit declaration of function ‘front’ [-Wimplicit-function-declaration]
   80 |     Nodo* aux = front(list);
      |                 ^~~~~
list.c:80:17: error: initialization of ‘int *’ from ‘int’ makes pointer from integer without a cast [-Wint-conversion]
list.c:82:18: error: request for member ‘next’ in something not a structure or union
   82 |         aux = aux->next;
      |                  ^~
list.c:84:10: error: request for member ‘next’ in something not a structure or union
   84 |     nuevo->next = aux->next;
      |          ^~
list.c:84:22: error: request for member ‘next’ in something not a structure or union
   84 |     nuevo->next = aux->next;
      |                      ^~
list.c:85:8: error: request for member ‘next’ in something not a structure or union
   85 |     aux->next = nuevo;
      |        ^~
01f9b78
Fri Mar 27 05:48:56 PM UTC 2026: 
 list.c | 4 ++--
 1 file changed, 2 insertions(+), 2 deletions(-)
Compilation failed
In file included from test.c:5:
list.c: In function ‘pushCurrent’:
list.c:80:17: error: implicit declaration of function ‘front’ [-Wimplicit-function-declaration]
   80 |     Node* aux = front(list);
      |                 ^~~~~
list.c:80:17: error: initialization of ‘Node *’ from ‘int’ makes pointer from integer without a cast [-Wint-conversion]
3bfe0a6
Fri Mar 27 05:49:46 PM UTC 2026: 
 list.c | 2 +-
 1 file changed, 1 insertion(+), 1 deletion(-)
 tests:  0|0
dda662e
Fri Mar 27 05:51:59 PM UTC 2026: 
 list.c | 5 +----
 1 file changed, 1 insertion(+), 4 deletions(-)
 tests:  0|6
total_score: 0/60
cc472d3
Fri Mar 27 05:54:10 PM UTC 2026: 
 list.c | 1 +
 1 file changed, 1 insertion(+)
 tests:  0|6
total_score: 0/60
90544aa
Fri Mar 27 05:57:31 PM UTC 2026: 
 list.c | 3 ++-
 1 file changed, 2 insertions(+), 1 deletion(-)
 tests:  0|0
698f479
Fri Mar 27 06:00:46 PM UTC 2026: 
 tests:  0|0
144d8fe
Fri Mar 27 06:01:24 PM UTC 2026: 
 tests:  0|0
f1603fe
Fri Mar 27 06:04:51 PM UTC 2026: 
 list.c | 7 +++----
 1 file changed, 3 insertions(+), 4 deletions(-)
 tests:  0|6
total_score: 0/60
70f9267
Fri Mar 27 06:05:46 PM UTC 2026: 
 list.c | 1 +
 1 file changed, 1 insertion(+)
 tests:  0|6
total_score: 0/60
7e52cb7
Fri Mar 27 06:12:20 PM UTC 2026: 
 list.c | 7 ++++++-
 1 file changed, 6 insertions(+), 1 deletion(-)
 tests:  0|6
total_score: 0/60
fc08fc3
Fri Mar 27 06:13:03 PM UTC 2026: 
 list.c | 1 +
 1 file changed, 1 insertion(+)
 tests:  0|6
total_score: 0/60
5daaa2d
Fri Mar 27 06:15:43 PM UTC 2026: 
 list.c | 4 ++--
 1 file changed, 2 insertions(+), 2 deletions(-)
 tests:  0|0
f349121
Fri Mar 27 06:20:01 PM UTC 2026: 
 list.c | 5 +++--
 1 file changed, 3 insertions(+), 2 deletions(-)
 tests:  0|0
d6d1909
Fri Mar 27 06:22:05 PM UTC 2026: 
 list.c | 6 +++---
 1 file changed, 3 insertions(+), 3 deletions(-)
 tests:  0|6
total_score: 0/60
6ed1a14
Fri Mar 27 06:26:28 PM UTC 2026: 
 list.c | 5 ++++-
 1 file changed, 4 insertions(+), 1 deletion(-)
 tests:  0|6
total_score: 0/60
971f049
Fri Mar 27 06:27:41 PM UTC 2026: 
 list.c | 1 +
 1 file changed, 1 insertion(+)
 tests:  0|6
total_score: 0/60
069e4d0
Fri Mar 27 06:28:09 PM UTC 2026: 
 list.c | 2 ++
 1 file changed, 2 insertions(+)
 tests:  0|6
total_score: 0/60
083533d
Fri Mar 27 06:32:17 PM UTC 2026: 
 list.c | 14 +++++++-------
 1 file changed, 7 insertions(+), 7 deletions(-)
 tests:  1|5
total_score: 10/60
e785313
Fri Mar 27 06:32:52 PM UTC 2026: 
 list.c | 2 --
 1 file changed, 2 deletions(-)
 tests:  1|5
total_score: 10/60
fe3800a
Fri Mar 27 06:33:02 PM UTC 2026: 
 tests:  1|5
total_score: 10/60
61b2b0f
Fri Mar 27 06:39:50 PM UTC 2026: 
 tests:  1|5
total_score: 10/60
3365b6b
Sun Mar 29 12:03:18 AM UTC 2026: 
 list.c | 8 ++++++++
 1 file changed, 8 insertions(+)
Compilation failed
In file included from list.c:6,
                 from test.c:5:
list.c: In function ‘createList’:
list.c:39:8: error: void value not ignored as it ought to be
   39 |     if(assert(new != NULL));
      |        ^~~~~~
list.c:43:15: error: expected ‘;’ before ‘else’
   43 |     return new
      |               ^
      |               ;
   44 |     else{
      |     ~~~~       
a21e0bc
Sun Mar 29 12:04:05 AM UTC 2026: 
 list.c | 6 ++++--
 1 file changed, 4 insertions(+), 2 deletions(-)
Compilation failed
In file included from list.c:6,
                 from test.c:5:
list.c: In function ‘createList’:
list.c:39:8: error: void value not ignored as it ought to be
   39 |     if(assert(new != NULL)){
      |        ^~~~~~
list.c:49:1: error: control reaches end of non-void function [-Werror=return-type]
   49 | }
      | ^
cc1: all warnings being treated as errors
db63992
Sun Mar 29 12:05:08 AM UTC 2026: 
 list.c | 6 +-----
 1 file changed, 1 insertion(+), 5 deletions(-)
 tests:  2|4
total_score: 20/60
294630e
Sun Mar 29 01:45:28 AM UTC 2026: 
 list.c | 16 ++++++++++++----
 1 file changed, 12 insertions(+), 4 deletions(-)
 tests:  0|0
b6d6b67
Sun Mar 29 01:49:57 AM UTC 2026: 
 list.c | 16 ++++++++++++----
 1 file changed, 12 insertions(+), 4 deletions(-)
 tests:  3|4
total_score: 25/60
d652f84
Sun Mar 29 01:57:10 AM UTC 2026: 
 list.c | 8 ++++----
 1 file changed, 4 insertions(+), 4 deletions(-)
 tests:  3|4
total_score: 25/60
d73c496
Sun Mar 29 01:58:51 AM UTC 2026: 
 list.c | 4 ++--
 1 file changed, 2 insertions(+), 2 deletions(-)
 tests:  3|4
total_score: 25/60
e070197
Sun Mar 29 02:01:54 AM UTC 2026: 
 list.c | 6 +++---
 1 file changed, 3 insertions(+), 3 deletions(-)
 tests:  10|2
total_score: 40/60
7fb4724
Sun Mar 29 02:21:58 AM UTC 2026: 
 list.c | 13 +++++++++++++
 1 file changed, 13 insertions(+)
Compilation failed
In file included from test.c:5:
list.c: In function ‘pushFront’:
list.c:103:5: error: ‘liste’ undeclared (first use in this function); did you mean ‘list’?
  103 |     liste->head = nuevo;
      |     ^~~~~
      |     list
list.c:103:5: note: each undeclared identifier is reported only once for each function it appears in
bc524ef
Sun Mar 29 02:22:21 AM UTC 2026: 
 list.c | 2 +-
 1 file changed, 1 insertion(+), 1 deletion(-)
 tests:  11|1
total_score: 50/60
8bd41de
Sun Mar 29 02:46:59 AM UTC 2026: 
 list.c | 21 +++++++++++++++++++++
 1 file changed, 21 insertions(+)
 tests:  0|0
f2f34d5
Sun Mar 29 02:48:59 AM UTC 2026: 
 list.c | 4 ++++
 1 file changed, 4 insertions(+)
 tests:  12|0
total_score: 60/60
876695d
Sun Mar 29 02:55:03 AM UTC 2026: 
 tests:  12|0
total_score: 60/60
21ed7ef
